--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     <script src="lib/angular-resource.js"></script>
     <script src="lib/angularfire.min.js"></script>
   <script src="lib/firebase.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
